<resources>
    <string name="app_name">SgApp</string>
    <string name="system_name">予定管理システム</string>
    <string name="character_name">〜くろのん〜</string>
    <string name="kronon">くろのん</string>
    <string name="star">すたっち</string>
    <string name="start_button">スタートボタン</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">メールアドレス</string>
    <string name="prompt_password">パスワード</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="not_account">アカウントをお持ちでない場合</string>
    <string name="new_user"><u>新規登録</u></string>
    <string name="five_star">星が５つ</string>
    <string name="login_text">ログイン</string>
    <string name="new_account_title">アカウント作成</string>
    <string name="new_account_description">
        表示名は日本語で15文字以内\n
        パスワードは半角英数字で8~20文字\n
        大文字•小文字•数字は必ず使用して\n
        設定してね。
    </string>
    <string name="prompt_name">表示名</string>
    <string name="prompt_password_confirm">パスワードの確認</string>
    <string name="new_account_button">新規登録</string>
    <string name="back_button">戻る</string>
    <string name="login"><u>ログイン</u></string>
    <string name="not_account_text">ログインアカウントがある？</string>
    <string name="title_activity_main_buttom">MainActivity</string>
    <string name="title_calendar">カレンダー</string>
    <string name="title_schedule">予定表</string>
    <string name="title_account">アカウント</string>
    <string name="calendar_title_text">カレンダー</string>
    <string name="kronon_chat">話すくろのん</string>
    <string name="pre_button">前の月</string>
    <string name="next_button">次の月</string>
    <string name="schedule_title_text">予定表</string>
    <string name="account_title_text">アカウント</string>
    <string name="create_button">予定登録</string>
    <string name="sunday_text">日</string>
    <string name="monday_text">月</string>
    <string name="tuesday_text">火</string>
    <string name="wednesday_text">水</string>
    <string name="thursday_text">木</string>
    <string name="friday_text">金</string>
    <string name="Saturday_text">土</string>
    <string name="kronon_chat_text">おはよう☀︎もうすぐ日曜日！！\n今日も1日頑張ろうね★</string>
    <string name="account_name_text">藤本</string>
    <string name="account_mail_text">fujimoto@gmail.com</string>
    <string name="avatar_text">アバター</string>
    <string name="logout_button_text">ログアウト</string>
    <string name="new_schedule_title">予定登録</string>
    <string name="update_schedule_title">予定修正</string>
    <string name="content_text">内容</string>
    <string name="place_text">場所</string>
    <string name="date_text">日付</string>
    <string name="start_time_text">開始時間</string>
    <string name="end_time_text">終了時間</string>
    <string name="ok_text">OK</string>
    <string name="title_text">タイトル</string>
    <string name="detail_schedule_title">予定詳細</string>
    <string name="update">修正</string>
    <string name="delete">削除</string>

    <string-array name="list">
        <item>オフィス</item>
        <item>在宅</item>
        <item>外出</item>
    </string-array>
</resources>