<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".TopActivity" >

    <TextView
        android:id="@+id/system_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/system_name"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/system_name" />

    <TextView
        android:id="@+id/character_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/character_name"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@+id/system_name" />

    <ImageView
        android:id="@+id/top_kronon"
        android:layout_width="229dp"
        android:layout_height="237dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/kronon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character_name"
        app:srcCompat="@drawable/top_kronon" />

    <ImageView
        android:id="@+id/top_star"
        android:layout_width="117dp"
        android:layout_height="138dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="200dp"
        android:layout_marginRight="200dp"
        android:contentDescription="@string/star"
        app:layout_constraintEnd_toEndOf="@+id/top_kronon"
        app:layout_constraintStart_toStartOf="@+id/top_kronon"
        app:layout_constraintTop_toBottomOf="@+id/character_name"
        app:srcCompat="@drawable/top_star" />

    <ImageButton
        android:id="@+id/start_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/start_button"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_star"
        app:srcCompat="@drawable/start_button" />

</androidx.constraintlayout.widget.ConstraintLayout>